tests/files/lexer_tests/should_fail/102.cmdr
//Should not parse due to missing semicolon
while (true) echo hi